# drone-frame-exporter

./: .gitignore  LICENSE  README.md  launch_drone_frame_extractor.command  pyproject.toml
docs/: notes.md
media/: 2025-06-11_2315554315_Gravel-Fahrt.gpx
src/app/: main.py
src/app/services/: __init__.py  presentation.py
src/app/ui/: __init__.py  launcher.py  main_window.py  map_panel.py  track_view.py  web_map.py
src/core/: __init__.py  errors.py  export.py  gpx.py  map_preview.py  metadata.py  models.py  sync.py  utils.py  video.py
tests/: test_cli.py  test_export.py  test_preview_map.py  test_sync.py
